fix warning while running tests