@@ -32,3 +32,8 @@ dependencies {
 tasks.withType<Test> {
     useJUnitPlatform()
 }
+
+val enableAgentLoadingForMockito = listOf("-XX:+EnableDynamicAgentLoading")
+tasks.test {
+    jvmArgs(enableAgentLoadingForMockito)
+}
